2014-02-10  Mark Hahnenberg  <mhahnenberg@apple.com>

        Handling of opaque roots is wrong in EdenCollections
        https://bugs.webkit.org/show_bug.cgi?id=128210

        Reviewed by Geoffrey Garen.

        Forgot to svn add the regression tests for this bug.

        * js/generational-opaque-roots-expected.txt: Added.
        * js/script-tests/generational-opaque-roots.js: Added.

2014-02-10  Brady Eidson  <beidson@apple.com>

        Skip indexeddb tests for now until somebody can explore 128341.
        https://bugs.webkit.org/show_bug.cgi?id=128341

        * platform/mac-wk2/TestExpectations:

2014-02-10  Michał Pakuła vel Rutka  <m.pakula@samsung.com>

        Unreviewed EFL gardening

        Add test expectations for crashing tests.

        * platform/efl-wk2/TestExpectations:

2014-02-10  Alexey Proskuryakov  <ap@apple.com>

        REGRESSION(r163660-r163664): js/dom/stack-trace.html fails
        https://bugs.webkit.org/show_bug.cgi?id=128544

        * TestExpectations: Marked as such (possibly passing on other platforms?)

2014-02-10  Filip Pizlo  <fpizlo@apple.com>

        Skip fast/workers/dedicated-worker-lifecycle
        https://bugs.webkit.org/show_bug.cgi?id=128537

        * TestExpectations:

2014-02-10  Mihnea Ovidenie  <mihnea@adobe.com>

        [CSSRegions] Add tests for scrolling composited content
        https://bugs.webkit.org/show_bug.cgi?id=128527

        Reviewed by Andrei Bucur.

        Add tests take simulate scrolling in the context of regions and composited content:
        1. scroll an empty region that is composited
        2. scroll a region that displays composited content

        * compositing/regions/composited-content-fixed-region-scrolled-expected.txt: Added.
        * compositing/regions/composited-content-fixed-region-scrolled.html: Added.
        * compositing/regions/fixed-empty-region-scrolled-expected.txt: Added.
        * compositing/regions/fixed-empty-region-scrolled.html: Added.
